--- a/app/src/main/res/layout/fragment_motorized_cart.xml
+++ b/app/src/main/res/layout/fragment_motorized_cart.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_light"
-    tools:context=".transport.screen.MotorizedCartFragment">
+    tools:context=".transport.screen.bicycle.MotorizedCartFragment">
 
     <TextView
         android:id="@+id/textView8"
