--- a/app/src/main/res/layout/fragment_too_bicycle.xml
+++ b/app/src/main/res/layout/fragment_too_bicycle.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_light"
-    tools:context=".transport.screen.BicycleTooFragment">
+    tools:context=".transport.screen.bicycle.BicycleTooFragment">
 
     <TextView
         android:id="@+id/textView8"
